basic layout of nav main and footer is done

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <title>Froma Gym</title>
+</head>
+<body>
+    <nav class="nav-bar">
+        <div><img src="/Icons/Logo.jpg" alt="logo" ></div>
+        <div class="gymName">
+            <h3>Forma</h3>
+            <h4>Fitness Club</h4>
+        </div>
+        <div class="button home">About Us</div>
+        <div class="button address">Contact Us</div>
+        <div class="button address">Gym Timing</div>
+    </nav>
+    <main>
+        <div class="pimage1">
+            <div class="text">This is the first text</div>
+        </div>
+        <div class="pimage2">
+            <div class="text">This is the first text</div>
+        </div>
+        <div class="pimage1">
+            <div class="text">This is the first text</div>
+        </div>
+    </main>
+    <footer class="f-Address" id="contactUs">
+        <div class="add location">
+            <div class="icon"><img src="/Icons/location.png" alt="location"></div>
+            <div>Below Hotel northern frontier, Near D Mart & Tulja Bhawani Mandir, Hinjewadi Road, Pune - 411057</div>
+        </div>
+        <div class="add contactNumber">
+            <div class="icon"><img src="/Icons/phone.png" alt="phonepng"></div>
+            <div>Phone: 020 6933 4447</div>
+        </div>
+        <div class="add mail">
+            <div class="icon"><img src="/Icons/mail.png" alt="mailpng"></div>
+            <div>fromafitnessclub@gmail.com</div>
+        </div>
+        <div class="add facebook">
+            <a href="http://facebook.com"><img src="/Icons/facebook.svg" alt="facebook"></a>
+        </div>
+        <div class="add instagram">
+            <a href="http://instagram.com"><img src="/Icons/facebook.svg" alt="instagram"></a>
+        </div>
+    </footer>
+</body>
+</html>
