--- a/index.html
+++ b/index.html
@@ -20,7 +20,46 @@
     </nav>
     <main>
         <div class="pimage1">
-            <div class="text">This is the first text</div>
+            <div class="text">
+                <div class="programs font">
+                    <h4 class="title">Forma Programmes</h4>
+                    <div class="displayPosition">
+                        <div class="icon">
+                            <img src="/Icons/zumba.png" alt="zumbapng">
+                        </div>
+                        <ul class="List">
+                            <li>Zumba Classes</li>
+                        </ul>
+                    </div>
+
+                    <div class="displayPosition">
+                        <div class="icon">
+                            <img src="/Icons/Yoga.png" alt="yogapng">
+                        </div>
+                        <ul class="List">
+                            <li>Yoga Classes</li>
+                        </ul>
+                    </div>
+
+                    <div class="displayPosition">
+                        <div class="icon">
+                            <img src="/Icons/circuitTraining.png" alt="circuitTrainingpng">
+                        </div>
+                        <ul class="List">
+                            <li>Circuit Training</li>
+                        </ul>
+                    </div>
+
+                    <div class="displayPosition">
+                        <div class="icon">
+                            <img src="/Icons/Gym.png" alt="zumbapng">
+                        </div>
+                        <ul class="List">
+                            <li>Regular Workout</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="pimage2">
             <div class="text">This is the first text</div>
@@ -30,23 +69,114 @@
         </div>
     </main>
     <footer class="f-Address" id="contactUs">
-        <div class="add location">
-            <div class="icon"><img src="/Icons/location.png" alt="location"></div>
-            <div>Below Hotel northern frontier, Near D Mart & Tulja Bhawani Mandir, Hinjewadi Road, Pune - 411057</div>
-        </div>
-        <div class="add contactNumber">
-            <div class="icon"><img src="/Icons/phone.png" alt="phonepng"></div>
-            <div>Phone: 020 6933 4447</div>
-        </div>
-        <div class="add mail">
-            <div class="icon"><img src="/Icons/mail.png" alt="mailpng"></div>
-            <div>fromafitnessclub@gmail.com</div>
-        </div>
-        <div class="add facebook">
-            <a href="http://facebook.com"><img src="/Icons/facebook.svg" alt="facebook"></a>
-        </div>
-        <div class="add instagram">
-            <a href="http://instagram.com"><img src="/Icons/facebook.svg" alt="instagram"></a>
+        <div class="container">
+            <div class="footerLinks">
+                <div class="programs font">
+                    <h4 class="title">Forma Programmes</h4>
+                    <div class="displayPosition">
+                        <div class="icon">
+                            <img src="/Icons/zumba.png" alt="zumbapng">
+                        </div>
+                        <ul class="List">
+                            <li>Zumba Classes</li>
+                        </ul>
+                    </div>
+
+                    <div class="displayPosition">
+                        <div class="icon">
+                            <img src="/Icons/Yoga.png" alt="yogapng">
+                        </div>
+                        <ul class="List">
+                            <li>Yoga Classes</li>
+                        </ul>
+                    </div>
+
+                    <div class="displayPosition">
+                        <div class="icon">
+                            <img src="/Icons/circuitTraining.png" alt="circuitTrainingpng">
+                        </div>
+                        <ul class="List">
+                            <li>Circuit Training</li>
+                        </ul>
+                    </div>
+
+                    <div class="address mail displayPosition">
+                        <div class="icon">
+                            <img src="/Icons/Gym.png" alt="zumbapng">
+                        </div>
+                        <ul class="List">
+                            <li>Regular Workout</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="Plans font">
+                    <h4 class="title">Monthly Plan</h4>
+                    <ul class="List">
+                        <li>1 Month one person Rs 1500 </li>
+                        <li>1 Month two person Rs 2000</li>
+                        <li>4 Month one person Rs 4000 </li>
+                        <li>4 Month two person Rs 7000</li>
+                    </ul>
+                </div>
+                <div class="Social font">
+                    <h4 class="title">Social Media</h4>
+                    <div class="address mail displayPosition">
+                        <div class="icon">
+                            <a href="mailto:formafitnessclub@gmail.com">
+                                <img src="/Icons/mail.png" alt="mailpng">
+                            </a>
+                        </div>
+                        <div>Click here to Email</div>
+                    </div>
+                    <div class="address facebook displayPosition">
+                        <div class="icon">
+                            <a href="http://facebook.com">
+                                <img src="/Icons/facebook.png" alt="facebook">
+                            </a>
+                        </div>
+                        <div class="name">Facebook</div>
+
+                    </div>
+                    <div class="address instagram displayPosition">
+                        <div class="icon">
+                            <a href="http://instagram.com">
+                                <img src="/Icons/instagram.png" alt="instagram">
+                            </a>
+                        </div>
+                        <div class="name">Instagram</div>
+
+                    </div>
+                </div>
+                <div class="Location font">
+                    <h4 class="title">Location</h4>
+                    <div class="address location">
+                        <div class="icon">
+                            <a href="https://www.google.com/maps/place/Forma+Fitness+Club/@18.591451,73.7424918,18z/data=!3m1!4b1!4m5!3m4!1s0x3bc2bbde5d702467:0x39c50227a05392de!8m2!3d18.5914531!4d73.7435409">
+                                <img src="/Icons/location.png" alt="location">
+                            </a>
+                        </div>
+                        <ul>
+                            <li>Below Hotel northern frontier,</li>
+                            <li>Near D Mart & Tulja Bhawani Mandir,</li>
+                            <li>Hinjewadi Road,</li>
+                            <li>Pune - 411057</li>
+                        </ul>
+                    </div>
+                    <div class="address contactNumber displayPosition">
+                        <div class="icon">
+                            <a href="tel:+020 6933 4447">
+                                <img src="/Icons/phone.png" alt="phonepng">
+                            </a>
+                        </div>
+                        <div class="contactInfo">Phone: 020 6933 4447</div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyrights">
+                <div class="pageEnd">
+                    <h4>Copyright © 2022 Forma Fitness Club Private Limited.</h4>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
