Minor changes in the main and nav bar added new logo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <div><img src="/Icons/Logo.jpg" alt="logo" ></div>
+        <div><img src="/Icons/Logo2.PNG" alt="logo" ></div>
         <div class="gymName">
             <h3>Forma</h3>
             <h4>Fitness Club</h4>
         </div>
+        <div class="button home">Home</div>
         <div class="button home">About Us</div>
+        <div class="button address">Programmes</div>
         <div class="button address">Contact Us</div>
-        <div class="button address">Gym Timing</div>
     </nav>
     <main>
         <div class="pimage1">
@@ -58,10 +59,12 @@
                             <li>Regular Workout</li>
                         </ul>
                     </div>
+
+                    
                 </div>
             </div>
         </div>
-        <div class="pimage2">
+        <div id="home" class="pimage2">
             <div class="text">This is the first text</div>
         </div>
         <div class="pimage1">
@@ -174,7 +177,7 @@
             </div>
             <div class="copyrights">
                 <div class="pageEnd">
-                    <h4>Copyright © 2022 Forma Fitness Club Private Limited.</h4>
+                    <div>Copyright © 2022 Forma Fitness Club Private Limited.</div>
                 </div>
             </div>
         </div>
