Minor changes within read me and html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <div id="home" class="homeAbout pimage1">
             <div class="about-container">
-                <p class="aboutGym">Forma Gym is located at the centre of Hinjewadi. Has all required equipments you need for your exercise. Has supportive trainers and staff. Additon to this new Programmes are also added scroll own to check. Has very clean environment, abides with recent COVID norms. Once registered youll have an apointment with nutritionist, based on your goal to add or reduce weight custom diet plan will be provided, as per persons eating habbits vegitarian/non vegitarian/mixed plans are provided</p>
+                <p class="aboutGym">Forma Gym is located at the centre of Hinjewadi. Has all required equipments you need for your exercise. Has supportive trainers. Addition to this new Programmes are also added scroll down to check. Has very clean environment and abides with recent COVID norms. Once registered you will have an apointment with nutritionist, based on your goal to add or reduce weight custom diet plan will be provided, these diet plan is based on the individuals eatings preference Veg/Non-Veg/Mixed</p>
             </div>
         </div>
         <!-- timing -->
